{
  "version": 4,
  "terraform_version": "1.14.7",
  "serial": 26,
  "lineage": "0ef21897-5bf1-3940-0ea9-981fce58494b",
  "resources": [
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb",
      "name": "external_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/Jameya-app-alb/90fb992576a70d13",
            "arn_suffix": "app/Jameya-app-alb/90fb992576a70d13",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "Jameya-app-alb-1794120227.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/Jameya-app-alb/90fb992576a70d13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "Jameya-app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0988ccb696181efff"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-066f797f11b4898b8"
              },
              {
                "subnet_id": "subnet-0969a6fab5b2053c3"
              }
            ],
            "subnets": [
              "subnet-066f797f11b4898b8",
              "subnet-0969a6fab5b2053c3"
            ],
            "tags": {
              "Name": "Jameya-app-alb"
            },
            "tags_all": {
              "Name": "Jameya-app-alb"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/Jameya-app-alb/90fb992576a70d13"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/Jameya-app-alb/90fb992576a70d13/5269ca987ebb6809",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/Jameya-app-app-tg/097544ae45bbb1a5",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/Jameya-app-alb/90fb992576a70d13/5269ca987ebb6809",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/Jameya-app-alb/90fb992576a70d13",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:listener/app/Jameya-app-alb/90fb992576a70d13/5269ca987ebb6809"
          },
          "dependencies": [
            "module.ALB.aws_lb.external_alb",
            "module.ALB.aws_lb_target_group.app_tg",
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ALB",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/Jameya-app-app-tg/097544ae45bbb1a5",
            "arn_suffix": "targetgroup/Jameya-app-app-tg/097544ae45bbb1a5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/Jameya-app-app-tg/097544ae45bbb1a5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:665398156927:loadbalancer/app/Jameya-app-alb/90fb992576a70d13"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Jameya-app-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Jameya-app-app-tg"
            },
            "tags_all": {
              "Name": "Jameya-app-app-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:665398156927:targetgroup/Jameya-app-app-tg/097544ae45bbb1a5"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_NAT_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0775e7283715ee4e8",
            "arn": "arn:aws:ec2:us-east-1:665398156927:elastic-ip/eipalloc-0775e7283715ee4e8",
            "association_id": "eipassoc-091b68ed3befab7bd",
            "domain": "vpc",
            "id": "eipalloc-0775e7283715ee4e8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bf503ac4aadd3552",
            "private_dns": "ip-10-0-2-113.ec2.internal",
            "private_ip": "10.0.2.113",
            "public_dns": "ec2-32-194-235-79.compute-1.amazonaws.com",
            "public_ip": "32.194.235.79",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-eip-NAT"
            },
            "tags_all": {
              "Name": "Jameya-app-eip-NAT"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "regional_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0775e7283715ee4e8",
            "association_id": "eipassoc-091b68ed3befab7bd",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d5b115d6bd67490e",
            "network_interface_id": "eni-0bf503ac4aadd3552",
            "private_ip": "10.0.2.113",
            "public_ip": "32.194.235.79",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0969a6fab5b2053c3",
            "tags": {
              "Name": "Jameya-app-regional-nat"
            },
            "tags_all": {
              "Name": "Jameya-app-regional-nat"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-02bef434842a2de01",
            "id": "rtb-02bef434842a2de01",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5b115d6bd67490e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jameya-app-private-rt-1a"
            },
            "tags_all": {
              "Name": "Jameya-app-private-rt-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-02bef434842a2de01",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.regional_nat",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-01527a1c1ab0a66ad",
            "id": "rtb-01527a1c1ab0a66ad",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d5b115d6bd67490e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jameya-app-private-rt-2a"
            },
            "tags_all": {
              "Name": "Jameya-app-private-rt-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-01527a1c1ab0a66ad",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.regional_nat",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0939d356d006257fb",
            "region": "us-east-1",
            "route_table_id": "rtb-02bef434842a2de01",
            "subnet_id": "subnet-0d1e3409d69912269"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.regional_nat",
            "module.nat.aws_route_table.private_rt_1a",
            "module.vpc.aws_subnet.private_sub_1a",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_rt_association_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d31969e820f88f73",
            "region": "us-east-1",
            "route_table_id": "rtb-01527a1c1ab0a66ad",
            "subnet_id": "subnet-05e0d8e4e82cd639a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.eip_NAT_1",
            "module.nat.aws_nat_gateway.regional_nat",
            "module.nat.aws_route_table.private_rt_2a",
            "module.vpc.aws_subnet.private_sub_2a",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-0988ccb696181efff",
            "description": "Security group for External Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0988ccb696181efff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "Jameya-app-external-lb-sg",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jameya-app-external-lb-sg"
            },
            "tags_all": {
              "Name": "Jameya-app-external-lb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-0988ccb696181efff",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:security-group/sg-0f5c89f2498fc9614",
            "description": "Security group for Private EC2 Servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f5c89f2498fc9614",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0988ccb696181efff"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Jameya-app-private-servers-sg",
            "name_prefix": "",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jameya-app-private-servers-sg"
            },
            "tags_all": {
              "Name": "Jameya-app-private-servers-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "sg-0f5c89f2498fc9614",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_group.aws_security_group.external_lb_sg",
            "module.vpc.aws_vpc.main_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:internet-gateway/igw-011530dc3dc64c423",
            "id": "igw-011530dc3dc64c423",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-igw"
            },
            "tags_all": {
              "Name": "Jameya-app-igw"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:route-table/rtb-03687bf0176d74853",
            "id": "rtb-03687bf0176d74853",
            "owner_id": "665398156927",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-011530dc3dc64c423",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Jameya-app-public-rt"
            },
            "tags_all": {
              "Name": "Jameya-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "rtb-03687bf0176d74853",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05eb8dfa3375fc379",
            "region": "us-east-1",
            "route_table_id": "rtb-03687bf0176d74853",
            "subnet_id": "subnet-066f797f11b4898b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_1",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e2e2d0754f7d3a1",
            "region": "us-east-1",
            "route_table_id": "rtb-03687bf0176d74853",
            "subnet_id": "subnet-0969a6fab5b2053c3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main_igw",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.public_sub_2",
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-0d1e3409d69912269",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1e3409d69912269",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-private-sub-1a"
            },
            "tags_all": {
              "Name": "Jameya-app-private-sub-1a"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-0d1e3409d69912269",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_sub_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-05e0d8e4e82cd639a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e0d8e4e82cd639a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-private-sub-2a"
            },
            "tags_all": {
              "Name": "Jameya-app-private-sub-2a"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-05e0d8e4e82cd639a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-066f797f11b4898b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066f797f11b4898b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-public-sub-1"
            },
            "tags_all": {
              "Name": "Jameya-app-public-sub-1"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-066f797f11b4898b8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_sub_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:subnet/subnet-0969a6fab5b2053c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0969a6fab5b2053c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "665398156927",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-public-sub-2"
            },
            "tags_all": {
              "Name": "Jameya-app-public-sub-2"
            },
            "vpc_id": "vpc-059fb7a5b1c9ce618"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "subnet-0969a6fab5b2053c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:665398156927:vpc/vpc-059fb7a5b1c9ce618",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bcb9967689331e99",
            "default_route_table_id": "rtb-0b8f3a65953065485",
            "default_security_group_id": "sg-045a02be865190ec5",
            "dhcp_options_id": "dopt-0c2b3d465a22a3d22",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-059fb7a5b1c9ce618",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b8f3a65953065485",
            "owner_id": "665398156927",
            "region": "us-east-1",
            "tags": {
              "Name": "Jameya-app-vpc"
            },
            "tags_all": {
              "Name": "Jameya-app-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "665398156927",
            "id": "vpc-059fb7a5b1c9ce618",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}